@@ -8,6 +8,7 @@
     option panes.
 ** Improvement: Added new editor substrate ("Drei").
 ** Improvement: Improved the pathname presentation methods considerably.
+** specification compliance: DELETE-GESTURE-NAME function now implemented.
 
 * Changes in mcclim-0.9.3 "All Souls' Day" relative to 0.9.2:
 ** backend improvement: The Null backend now registers itself in the
